kubernetes/overlays/dev/mongo-operator.yaml
---
# Source: psmdb-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-operator-psmdb-operator
  labels:
    app.kubernetes.io/name: psmdb-operator
    helm.sh/chart: psmdb-operator-1.11.0
    app.kubernetes.io/instance: mongodb-operator
    app.kubernetes.io/version: "1.11.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: psmdb-operator
      app.kubernetes.io/instance: mongodb-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: psmdb-operator
        app.kubernetes.io/instance: mongodb-operator
    spec:
      serviceAccountName: mongodb-operator-psmdb-operator
      containers:
        - name: psmdb-operator
          image: "percona/percona-server-mongodb-operator:1.11.0"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 60000
            name: metrics
          command:
          - percona-server-mongodb-operator
          resources:
            {}
