kubernetes/overlays/dev/restore.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restore
  template:
    metadata:
      labels:
        app: restore
    spec:
      containers:
      - name: mongo
        image: mongo:bionic
        command: [ "bash", "-c", "sleep infinity" ]
        volumeMounts:
        - mountPath: /sdf/home
          readOnly: true
          name: sdf-home
        # - name: postgres
        #   image: postgres:14.4-bullseye
        #   command:  [ "bash", "-c", "sleep infinity" ]
        #   volumeMounts:
        #   - mountPath: /source
        #     name: source
      - name: coact
        image: slaclab/coact:latest
        command: [ "bash", "-c", "sleep infinity" ]
        volumeMounts:
        - mountPath: /sdf/home
          readOnly: true
          name: sdf-home
      - name: curl
        image: curlimages/curl
        command:  [ "sh", "-c", "while [ 1 ]; do sleep 60; done" ]
      - name: scp
        image: kroniak/ssh-client
        command:  [ "bash", "-c", "sleep infinity" ]
        volumeMounts:
        - mountPath: /sdf/home
          readOnly: true
          name: sdf-home
      volumes:
      - name: sdf-home
        persistentVolumeClaim:
          claimName: sdf-home
