kubernetes/overlays/dev/code-server.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: code-server
spec:
 ports:
 - port: 8080
   targetPort: 8080
   name: http
 selector:
   app: code-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: coact-dev.slac.stanford.edu
    http:
      paths:
      - path: /code-server(/?|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      securityContext:
        runAsUser: 7017
        runAsGroup: 1051
        fsGroup: 1051
      containers:
      - image: linuxserver/code-server
        name: code-server
        command:
        - /app/code-server/lib/node 
        - /app/code-server 
        - --bind-addr 
        - 0.0.0.0:8443 
        - --user-data-dir 
        - /config/.local/share/code-server/data 
        - --extensions-dir 
        - /config/.local/share/code-server/extensions 
        - --disable-telemetry 
        - --auth 
        - password
        - /sdf/home/y/ytl/
        volumeMounts: 
        - name: init
          mountPath: /etc/passwd
          subPath: passwd
        - name: sdf-home
          mountPath: /config
          subPath: y/ytl/
        - name: sdf-home
          mountPath: /sdf/home
        - name: coact-ui-code
          mountPath: /workspace/coact-ui/
        - name: coact-api-code
          mountPath: /workspace/coact-api/
      volumes:
      - name: sdf-home
        persistentVolumeClaim:
          claimName: sdf-home
      - name: init
        emptyDir: {}
      - name: init-passwd
        configMap:
          name: passwd
          items:
          - key: passwd
            path: passwd
      - name: coact-ui-code
        persistentVolumeClaim:
          claimName: coact-ui-code
      - name: coact-api-code
        persistentVolumeClaim:
          claimName: coact-api-code
